fixed dropdown alignment

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -107,6 +107,7 @@
   top: 41px;
   display: none;
   position: absolute;
+  left: -7em;
   background-color: #f9f9f9;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
